# company-sso-core

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
company_sso_core/: __init__.py  admin.py  apps.py  exceptions.py  middleware.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
company_sso_core/migrations/: 0001_initial.py
company_sso_core/providers/: __init__.py  base.py  builtin_configs.py  facebook.py  generic.py  github.py  google.py
company_sso_core/services/: __init__.py  credential_loader.py  oauth_service.py
tests/: settings.py  test_credential_loader.py  test_google_provider.py  test_oauth_service.py  test_provider_registry.py  test_views.py  urls.py
