[metadata]
name = company-sso-core
version = 1.0.0
description = Production-grade reusable Django SSO package (OAuth2 login)
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
where = .
include = company_sso_core*
